assets/css/main.css
/* ... */
/* Mobile */

@media screen and (max-width: 736px) {
    /* Basic */
    body {
        min-width: 320px;
    }
    body,
    input,
    select,
    textarea {
        font-size: 11pt;
    }
    /* BG */
    @-moz-keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-300px, 0, 0);
            -webkit-transform: translate3d(-300px, 0, 0);
            -ms-transform: translate3d(-300px, 0, 0);
            transform: translate3d(-300px, 0, 0);
        }
    }
    @-webkit-keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-300px, 0, 0);
            -webkit-transform: translate3d(-300px, 0, 0);
            -ms-transform: translate3d(-300px, 0, 0);
            transform: translate3d(-300px, 0, 0);
        }
    }
    @-ms-keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-300px, 0, 0);
            -webkit-transform: translate3d(-300px, 0, 0);
            -ms-transform: translate3d(-300px, 0, 0);
            transform: translate3d(-300px, 0, 0);
        }
    }
    @keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-300px, 0, 0);
            -webkit-transform: translate3d(-300px, 0, 0);
            -ms-transform: translate3d(-300px, 0, 0);
            transform: translate3d(-300px, 0, 0);
        }
    }
    #bg {
        background-size: 300px auto;
        width: 900px;
    }
    /* Header */
    #header h1 {
        font-size: 2.5em;
    }
    #header p {
        font-size: 1em;
    }
    #header nav {
        font-size: 1em;
    }
    #header nav a:hover {
        font-size: 1em;
    }
    #header nav a:active {
        font-size: 1em;
    }
}


/* Mobile (Portrait) */

@media screen and (max-width: 480px) {
    /* BG */
    @-moz-keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-412.5px, 0, 0);
            -webkit-transform: translate3d(-412.5px, 0, 0);
            -ms-transform: translate3d(-412.5px, 0, 0);
            transform: translate3d(-412.5px, 0, 0);
        }
    }
    @-webkit-keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-412.5px, 0, 0);
            -webkit-transform: translate3d(-412.5px, 0, 0);
            -ms-transform: translate3d(-412.5px, 0, 0);
            transform: translate3d(-412.5px, 0, 0);
        }
    }
    @-ms-keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-412.5px, 0, 0);
            -webkit-transform: translate3d(-412.5px, 0, 0);
            -ms-transform: translate3d(-412.5px, 0, 0);
            transform: translate3d(-412.5px, 0, 0);
        }
    }
    @keyframes bg {
        0% {
            -moz-transform: translate3d(0, 0, 0);
            -webkit-transform: translate3d(0, 0, 0);
            -ms-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
        100% {
            -moz-transform: translate3d(-412.5px, 0, 0);
            -webkit-transform: translate3d(-412.5px, 0, 0);
            -ms-transform: translate3d(-412.5px, 0, 0);
            transform: translate3d(-412.5px, 0, 0);
        }
    }
    #bg {
        background-size: 100% auto;
        width: 1237.5px;
    }
    /* Header */
    #header nav {
        padding: 0 1em;
    }
}

